# snap-recipes

./: .gitignore
iotivity-devel/: snapcraft.yaml
iotivity-devel/examples/: SConstruct
iotivity-devel/examples/resource-encapsulation/: SConscript
iotivity-devel/src/: CMakeLists.txt
iotivity-examples/: snapcraft.yaml
iotivity-examples/examples/: SConstruct
ocf-util/: snapcraft.yaml
ocf-util/src/scripts/: init-svr-db.sh
ocf-util/src/staging/iotivity/: 0005-fix-linux-32b-build.patch
